# PowerCom

./: .mailmap  PowerCom.cabal  README.md  Setup.hs  powercom.sublime-project  testsbuild
docs/: listing.tex  rpz.tex  techtask.tex  Программа и методика испытаний.doc  Руководство пользователя.doc
src/: PowerCom.cabal
src/powercom/: ApplicationLevel.hs  Benchmark.hs  ChannelLevel.hs  Event.hs  Main.hs  PhysicalLevel.hs  TestSuite.hs  Utility.hs
src/powercom/Application/: ChatView.hs  Gui.hs  Layer.hs  OptionDialog.hs  Types.hs  UserList.hs
src/powercom/Channel/: Buffer.hs  Connection.hs  ConnectionChecker.hs  CyclicCode.hs  Frame.hs  Layer.hs  Miscs.hs  Options.hs  Processing.hs  Sending.hs
src/powercom/Physical/: Detector.hs  Layer.hs  Options.hs  Port.hs
views/: gui.glade
