Name                : PowerCom
Version             : 0.1
Cabal-Version       : >= 1.16
License             : GPL-3
Author              : Anton Gushcha
Synopsis            : Simple chat through serial port (zero modem cable)
Build-Type          : Custom
License-file        : ./LICENSE

Data-Files          : views/gui.glade

Test-Suite PowerCom-Test
    Type:       exitcode-stdio-1.0
    Main-Is:    TestSuite.hs
    Build-Depends: base 
                   , Cabal >= 1.9.2
                   , gtk
                   , serialport
                   , bytestring
                   , binary
                   , binary-strict
                   , QuickCheck >= 2.0
                   --, distributed-process
                   --, distributed-process-simplelocalnet
                   --, network-transport-inmemory
                   , test-framework >= 0.4.1
                   , test-framework-quickcheck2
                   --, test-framework-hunit

    Hs-Source-Dirs      : src/powercom
    Default-Language    : Haskell2010

Executable PowerCom
    Build-Depends       : base
                          , gtk
                          , serialport
                          , bytestring
                          , binary
                          , binary-strict
                          , QuickCheck >= 2.0
                          --, distributed-process
                          --, distributed-process-simplelocalnet
                          --, network-transport-inmemory

    Main-Is             : Main.hs
    Hs-Source-Dirs      : src/powercom
    Default-Language    : Haskell2010