Name:           PowerCom
Version:        0.1
Cabal-Version:  >= 1.10
License:        LGPL-3
Author:         Anton Gushcha
Synopsis:       Simple chat through serial port (zero modem cable)
Build-Type:     Simple
License-file:   ./LICENSE
Data-Files:     
                      views/comotron-connect.png,
                      views/comotron-disconnect.png,
                      views/comotron-user.png,
                      views/gui.glade

Test-Suite PowerCom-Test
  Type:              exitcode-stdio-1.0
  Main-Is:           TestSuite.hs
  Build-Depends:     
                   base
                   , Cabal >= 1.9.2
                   , gtk
                   , serialport
                   , bytestring
                   , utf8-string
                   , binary
                   , binary-strict
                   , directory
                   , polynomial
                   , containers
                   , transformers
                   , QuickCheck >= 2.0
                   , distributed-process
                   , distributed-process-simplelocalnet
                   , network-transport-inmemory
                   , test-framework >= 0.4.1
                   , test-framework-quickcheck2
  Hs-Source-Dirs:    src/powercom
  Default-Language:  Haskell2010

Executable PowerCom
  Build-Depends:     
                          base,
                          gtk,
                          serialport,
                          bytestring,
                          utf8-string,
                          binary,
                          binary-strict,
                          directory,
                          polynomial,
                          containers,
                          transformers,
                          QuickCheck >= 2.0,
                          distributed-process,
                          distributed-process-simplelocalnet,
                          network-transport-inmemory,
                          time >=1.4 && <1.5,
                          old-locale >=1.0.0 && <1.1
  Main-Is:           Main.hs
  Hs-Source-Dirs:    src/powercom
  Default-Language:  Haskell2010
  ghc-options:            -Wall -rtsopts -fno-warn-unused-do-bind -fno-warn-orphans

executable Benchmark
  ghc-options:     -Wall -rtsopts -fno-warn-unused-do-bind -fno-warn-orphans
  Build-Depends:     
                          base,
                          gtk,
                          serialport,
                          bytestring,
                          utf8-string,
                          binary,
                          binary-strict,
                          directory,
                          polynomial,
                          containers,
                          transformers,
                          QuickCheck >= 2.0,
                          distributed-process,
                          distributed-process-simplelocalnet,
                          network-transport-inmemory,
                          time >=1.4 && <1.5,
                          old-locale >=1.0.0 && <1.1
  Main-Is:           Benchmark.hs
  Hs-Source-Dirs:    src/powercom
  Default-Language:  Haskell2010
